implement marketplace functionality, add subquery support, optimize N+1 issues